================================================

In this CVS branch, fixes in the SWIG core and improvements to the
language modules take place.  This branch is also the basis for the
"swig1.3" Debian package (currently unofficial, available from
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian).  Eventually it
will be merged with the development on the trunk of the CVS tree.

6/06/2001: mkoeppe
	   New configure option --with-release-suffix allows for
	   attaching a suffix to the swig binary and the swig runtime
	   libraries.  Minor changes to the build system.  "swig
	   -swiglib" works again.  If invoked with the new option
	   "-ldflags", SWIG prints a line of linker flags needed to
	   link with the runtime library of the selected language
	   module. 

6/06/2001: mkoeppe
	   [Guile] gswig_list_p is an int, not a SCM.  This typo
	   caused warnings when compiling with a Guile configured with
	   strict C type checking. In INPUT and BOTH typemaps
	   generated by the SIMPLE_MAP macro, use the SCM_TO_C
	   function to convert from Guile to C (rather than C_TO_SCM).
	   Use scm_intprint to print pointers (rather than
	   sprintf). Allow using "-linkage" instead of "-Linkage". 

6/05/2001: cheetah (william fulton)
	   [Java] Mods for using inherited c++ classes from Java
	   [Java] New example called class based on the same example from other modules

6/05/2001: cheetah (william fulton)
	   [Java] destructor (_delete()) was not aware of %name renaming
	   [Java] extends baseclass did not know about %name renaming
	   [Java] extends baseclass did extend even when the baseclass was not known to swig
	   [Java] sometimes enum-declarations occured before the Java class declaration
	   [Java] unrelated enum initialisations no longer appear in Java class
	   [Java] if module ends in '_' correct JNI names are now produced

6/04/2001: cheetah (william fulton)
	   [Java] Shadow class mods - Modified constructor replaces